<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp"
    tools:context="com.fatec.labs.fatec_firebase.Activity.CatIncludeActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTireFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_take_cat_picture"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imgTirarGatoAdocao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="takePic"
            app:srcCompat="@drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/tvwCatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cat_name" />

        <EditText
            android:id="@+id/edtCatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/tvwCatRace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cat_race" />

        <EditText
            android:id="@+id/edtCatRace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/tvwCatDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_cat_description" />

        <EditText
            android:id="@+id/edtCatDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmitCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:text="@string/textButon_cat_register"/>

        </LinearLayout>
    </LinearLayout>

    <!--
    <android.support.v7.widget.ContentFrameLayout
        android:id="@+id/frameTelaAdocao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.ContentFrameLayout>
    -->

</android.support.constraint.ConstraintLayout>
